Fix: Add overflow to prevent side scrolling on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 * {
     font-size: 10px;
+    overflow-x: hidden;
 }
 p {
     font-size:1.4rem;
 }
 body {
     font-family: 'Balsamiq Sans', cursive;
+    overflow-x: hidden;
 }
 /*--------------------------------------------Colors*/
 .navbar {
